[gd_scene load_steps=4 format=3 uid="uid://b17wpmhyxw1ag"]

[ext_resource type="Script" path="res://nodes/ui/menu_system/menu_system.gd" id="1_d3771"]
[ext_resource type="Theme" uid="uid://qkvjcwtwjvf7" path="res://nodes/ui/menu_theme.tres" id="2_nvy86"]
[ext_resource type="AudioStream" uid="uid://pdy2d5wo4qcc" path="res://sounds/end.wav" id="2_xcheg"]

[node name="systemButtons" type="HBoxContainer"]
script = ExtResource("1_d3771")

[node name="Accept" type="Button" parent="."]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
theme = ExtResource("2_nvy86")
theme_override_font_sizes/font_size = 125
text = "✔"

[node name="Back" type="Button" parent="."]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
theme = ExtResource("2_nvy86")
theme_override_font_sizes/font_size = 125
text = "←"

[node name="End" type="Button" parent="."]
modulate = Color(1, 0, 0.0156863, 1)
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
theme = ExtResource("2_nvy86")
theme_override_font_sizes/font_size = 72
text = "×"

[node name="endTimer" type="Timer" parent="End"]
wait_time = 0.9

[node name="spacer4" type="Control" parent="."]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3

[node name="endSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_xcheg")

[connection signal="pressed" from="Accept" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="End" to="." method="_on_end_pressed"]
[connection signal="timeout" from="End/endTimer" to="." method="_on_end_timer_timeout"]
